force-app/main/default/objects/Porcentaje_Combustible__c/fields/Ano__c.field-meta.xml
<CustomField>
    <fullName>Ano__c</fullName>
    <formula>YEAR(Fecha_Inicial__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Año</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>