force-app/main/default/objects/Porcentaje_Combustible__c/fields/Fecha_Inicial__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicial__c</fullName>
    <label>Fecha Inicial</label>
    <type>Date</type>
</CustomField>