force-app/main/default/objects/Porcentaje_Combustible__c/fields/Mes__c.field-meta.xml
<CustomField>
    <fullName>Mes__c</fullName>
    <formula>MONTH( Fecha_Inicial__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>