force-app/main/default/objects/Porcentaje_Combustible__c/fields/Periodo__c.field-meta.xml
<CustomField>
    <fullName>Periodo__c</fullName>
    <label>Periodo</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>