force-app/main/default/objects/Porcentaje_Combustible__c/fields/Porcentaje_Mensual__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Mensual__c</fullName>
    <label>Porcentaje Mensual</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>